# Equinox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ci.yml
lessons_md/: 01_basic_arrays.py  02_jax_basics_function_guide.md  03_equinox_basics_function_guide.md  README.md
scripts/: test1.py
src/jax_learning/: __init__.py  basics.py  equinox_basics.py  hello.py
tests/: test_equinox_basics.py  test_hello.py  test_jax_basics_lessons.py
tests/fixtures/: linear_regression_points.csv  wavy_points.csv
