[project]
name = "jax_learning"
version = "0.1.0"
description = "YOU SHALL LEARN JAXXXXXX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "optax",
  "equinox",
  "jaxtyping",
  "matplotlib",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "ipykernel",
  "jupyterlab",
  "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
